feat(build): jlink + CDS distroless images with an evidence-based module allow-list
Builds all five services on gcr.io/distroless/java-base-debian12:nonroot with
a jlink-trimmed runtime and a class-data-sharing archive. Startup drops from
1204 ms to 730 ms (39%); a redeploy re-pulls 11.6 MB.

The module allow-list is derived from evidence, not from jdeps alone. For the
gateway, jdeps reported 13 modules, an -Xlog:class+load trace observed 20, and
only 8 appeared in both. scripts/derive-jlink-modules.sh unions the two sources
and fails when the committed list is short. Even that was not enough on its
own: jdk.net appears in neither source for the gateway because the gateway has
no Redis, and both timeline-service and fanout-worker failed context refresh
with NoClassDefFoundError: jdk/net/ExtendedSocketOptions from Lettuce. Building
one service and assuming the rest would follow would have shipped two broken
images that passed every static check.

Other findings, each recorded in ADR-0010 with its evidence:

- java.desktop is mandatory for a headless Spring service, because
  java.beans.PropertyEditorSupport lives there. 14 MB.
- A jlink runtime ships no base CDS archive, so -XX:ArchiveClassesAtExit emits
  only a warning and produces nothing. --generate-cds-archive plus a test -s
  gate turns that silent failure into a build failure.
- CDS records absolute classpath paths, so the training stage and the runtime
  stage must use the identical directory or the archive is ignored silently.
- --enable-native-access=ALL-UNNAMED is deliberately not set: it disables
  optimized module handling against the jlink base archive.

The size gate is reshaped, because total size is not what anything pays. Cold
pull (gzipped blobs, what an empty node downloads, and in Tier S that is every
node on every run) is budgeted per service in docker/image-budgets.txt, since
one global limit would have to be set by tweet-service at 167 MB and would let
the gateway triple. Warm pull (layers who